--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Test
         run: |
-          docker-compose up -d
+          docker-compose up -d app testdb
           docker-compose run --rm app sh -c "pytest"
       - name: Formating
         run: docker-compose run --rm app sh -c "flake8"
