--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ psycopg2-binary==2.9.6
 freezegun==1.2.2
 Flask-SocketIO==5.3.4
 eventlet==0.33.3
+Flask-Session==0.5.0
+Flask-SQLAlchemy==3.0.3
+Flask-Migrate==4.0.4
